# beaker-plugin-safe-authenticator

./: .eslintrc  .gitignore  .gitmodules  .npmignore  .travis.yml  CHANGELOG.MD  Cargo.toml  README.md  appveyor.yml  build_libs.js  config.xml  grep_error_codes.js  hooks  index.js  jest.config.js  package.json  webpack.config.api.js  webpack.config.development.js  webpack.config.protocol.js  www
config/cordova/: config.xml
config/webpack/: api.js  development.js  protocol.js
locales/: en.json
src/: common.js  config.js  constants.js  constants.json  lib.rs  winston-config.js
src/api/: client.js  index.js
src/app/: app.html  app.js  constants.json  index.js  router.js  store.js  utils.js
src/app/actions/: app.js  auth.js  network_state.js
src/app/components/: account_info.js  alert.js  app.js  app_details.js  app_list.js  app_list_item.js  auth_loader.js  create_account.js  create_account_password.js  create_account_secret.js  create_account_welcome.js  field_strength.js  invite_code.js  login.js  network_status.js  spinner.js
src/app/containers/: app.js  app_details.js  app_list.js  app_list_container.js  create_account.js  login.js
src/app/reducers/: app.js  auth.js  index.js  network_state.js
src/cordova/: config.xml
src/ffi/: FfiApi.js  authenticator.js  client_manager.js  constants.json  error_code_lookup.json  ffi_loader.js  ipc.js  lib.js  listeners.js  safe_lib.js  sys_uri.js  sys_uri_loader.js
src/protocols/: safe_auth.js  safe_auth_rpc.js
test/: client.spec.js  client.test.js  helper.js  sample.test.js  setup.js  utils.js
(+31 files in other folders)
